default/nextcloud/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nextcloud
  namespace: default
  annotations:
    flux.weave.works/ignore: 'false'
    flux.weave.works/tag.nextcloud: glob:amd64-*-ls*
    flux.weave.works/tag.mariadb: glob:amd64-*-ls*
    flux.weave.works/tag.redis: glob:5*-alpine
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      nodeSelector:
        kubernetes.io/hostname: knode2
      volumes:
      - name: config
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:nextcloud-config
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: mariadb-databases
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:nextcloud-mariadb-databases
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: mariadb-log
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:nextcloud-mariadb-log
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: data
        persistentVolumeClaim:
          claimName: nextcloud-data

      - name: mariadb-config
        configMap:
          name: nextcloud-mariadb
          items:
          - key: custom.cnf
            path: custom.cnf
      - name: redis-config
        configMap:
          name: nextcloud-redis
      - name: php-fpm-config
        configMap:
          name: nextcloud-php-fpm
      - name: nextcloud-crontabs
        configMap:
          name: nextcloud-crontabs

      containers:

      - name: nextcloud
        image: linuxserver/nextcloud:amd64-15.0.7-ls14
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        - name: php-fpm-config
          mountPath: /etc/php7/php-fpm.d/
        - name: nextcloud-crontabs
          mountPath: /etc/crontabs/
      - name: mariadb
        image: linuxserver/mariadb:amd64-110.3.14mariabionic-ls12
        volumeMounts:
        - name: mariadb-config
          mountPath: /config
        - name: mariadb-databases
          mountPath: /config/databases
        - name: mariadb-log
          mountPath: /config/log
      - name: redis
        image: redis:5-alpine
        command: ["redis-server"]
        args: ["/usr/local/etc/redis/redis.conf"]
        volumeMounts:
        - name: redis-config
          mountPath: /usr/local/etc/redis
        ports:
        - name: nextcloud
          containerPort: 443
