default/nextcloud/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  namespace: default
  annotations:
    flux.weave.works/tag.nextcloud: glob:19*-ls*
    flux.weave.works/tag.redis: glob:5*-alpine
    flux.weave.works/automated: 'true'
spec:
  serviceName: nextcloud
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      affinity:
       podAntiAffinity:
         preferredDuringSchedulingIgnoredDuringExecution:
         - weight: 100
           podAffinityTerm:
             labelSelector:
               matchExpressions:
               - key: app
                 operator: In
                 values:
                 - pms
             topologyKey: kubernetes.io/hostname
      volumes:
      - name: config
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:nextcloud-config
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: postgresql
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:nextcloud-postgresql
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: data
        persistentVolumeClaim:
          claimName: nextcloud-data
      # - name: appdata
      #   hostPath:
      #     path: /mnt/BLOCK/nextcloud-appdata
      #     type: Directory
      - name: redis-config
        configMap:
          name: nextcloud-redis
      - name: php-fpm-config
        configMap:
          name: nextcloud-php-fpm
      - name: nextcloud-crontabs
        configMap:
          name: nextcloud-crontabs
      - name: php-opcache-config
        configMap:
          name: nextcloud-php-opcache-config
          items:
          - key: 10-opcache.ini
            path: 10-opcache.ini
      - name: php-ini
        configMap:
          name: nextcloud-php-ini
          items:
            - key: php.ini
              path: php.ini
      - name: sockets
        emptyDir: {}

      containers:

      - name: nextcloud
        image: linuxserver/nextcloud:18.0.4-ls78
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /data
        # - name: appdata
        #   mountPath: /data/appdata
        - name: php-fpm-config
          mountPath: /etc/php7/php-fpm.d/
        - name: nextcloud-crontabs
          mountPath: /etc/crontabs/
        - name: php-opcache-config
          mountPath: /etc/php7/conf.d/10-opcache.ini
          subPath: 10-opcache.ini
        - name: php-ini
          mountPath: /etc/php7/php.ini
          subPath: php.ini
        - name: sockets
          mountPath: /sock
      - name: postgresql
        image: postgres:12.1
        volumeMounts:
        - name: postgresql
          mountPath: /var/lib/postgresql/data
      - name: redis
        image: redis:5-alpine
        command: ["redis-server"]
        args: ["/usr/local/etc/redis/redis.conf"]
        volumeMounts:
        - name: redis-config
          mountPath: /usr/local/etc/redis
        - name: sockets
          mountPath: /sock
        ports:
        - name: nextcloud
          containerPort: 443
