default/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
  annotations:
    flux.weave.works/ignore: 'false'
spec:
  selector:
    app: nextcloud
  ports:
  - name: nextcloud
    port: 443
    targetPort: 443
