default/nextcloud/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    flux.weave.works/ignore: 'true'
spec:
  tls:
  - hosts:
    - nextcloud.desertbluffs.com
  rules:
  - host: nextcloud.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 443
