default/nextcloud/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: nextcloud
  namespace: default
  annotations:
    flux.weave.works/ignore: 'true'
spec:
  podSelector:
    matchLabels:
      app: nextcloud
  ingress:
  - ports:
    - port: 443
    from: []
